public/stylesheets/main.css
/* ----- NAV ----- */
nav {
  background-color: #0e7001;
  height: 80px;
  position: relative; /* needed for box shadow */
  -webkit-box-shadow: 1px 1px 5px #000;
  -moz-box-shadow: 1px 1px 5px #000;
  box-shadow: 1px 1px 5px #000;
}

/* ----- TEXT ----- */
header, footer, section {
  padding: 25px;
  text-align: center;
  color: rgba(65, 22, 14, 0.9);
}
h1, h2 {
  text-shadow: 1px 1px 60px rgba(255,255,255,0.9);
}
  h1 {
    font-size: 60px;
  }
  h2 {
    font-size: 40px;
  }
  h3 {
    font-size: 30px;
  }

/* ----- HEADER / FOOTER ----- */
header {
  background: url("../images/wood-new2.jpg") no-repeat center center fixed;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
}
  header h1:first-child {
    margin-bottom: 30px;
  }
footer {
  background: url("../images/wood-new1.jpg") no-repeat center center fixed;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
}
  footer a {
    margin: 25px 0;
  }

/* ----- HEADER FORM ----- */
header form {
  text-shadow: none;
}
  header form label {
    font-size: 24px;
  }
  header form input[type="submit"] {
    font-size: 24px;
  }
  .form-inline .form-control {
    vertical-align: top;
  }
  .input-lg {
    height: 36px;
  }
  .btn-lg {
    font-size: 25px;
    padding: 5px;
    -webkit-box-shadow: 0 1px 2px rgba(0,0,0,0.15);
    -moz-box-shadow: 0 1px 2px rgba(0,0,0,0.15);
    box-shadow: 0 1px 2px rgba(0,0,0,0.15);
  }
  .btn-success {
    background-color: #0e7001;
    border-color: #335E33;
    margin-right: 10px;
  }
  .white-background {
    background-color: white;
    padding: 15px;
    border-radius: 10px;
    border: 2px solid rgb(79, 16, 11);
  }
  .pseudo-input {
    padding: 5px 5px 0px 0px;
    border: 1px solid #444;
    border-radius: 5px;
    -webkit-box-shadow: inset 0 1px 2px rgba(0,0,0,0.15);
    -moz-box-shadow: inset 0 1px 2px rgba(0,0,0,0.15);
    box-shadow: inset 0 1px 2px rgba(0,0,0,0.15);
  }
  .no-border {
    border: none;
  }
  input:focus {
    outline: none;
  }
  .form-control, .form-control:focus {
    border-color: inherit;
    -webkit-box-shadow: none;
    -moz-box-shadow: none;
    box-shadow: none;
  }

/* ----- HEADER LINKS ----- */
#links {
  margin-top: 25px;
}
  .icon {
    margin-top: 25px;
    padding-right: 0px;
  }
  #links img {
    height: 75px;
  }

/* ----- CAROUSEL ----- */
#carousel {
  -moz-box-shadow: 0 -8px 8px -8px #696868;
  -webkit-box-shadow: 0 -8px 8px -8px #696868;
  box-shadow: 0 -8px 8px -8px #696868;
}
  .carousel-indicators li {
    background-color: gray;
    border-color: black;
  }
  .carousel-indicators .active {
    background-color: #0e7001;
  }

/* ----- BIZ EXAMPLES ----- */
#business-examples {
  background-color: rgba(203, 115, 51, 0.8);
  position: relative;
  -moz-box-shadow:      0  8px 8px -8px #696868;
  -webkit-box-shadow:   0  8px 8px -8px #696868;
  box-shadow:           0  8px 8px -8px #696868;
}
  #business-examples .row {
    margin-left: 0px;
  }
  #business-examples img {
    width: 200px;
  }
  #business-examples h3 {
    margin: 50px 0;
  }
  #business-examples h3:first-child {
    margin-top: 25px;
  }
  #business-examples h2 {
    text-shadow: none;
  }
  .selected {
    border: 1px solid #9E6D13;
    border-left: none;
    background-color: rgb(255, 216, 165);
  }
  #biz-content {
    height: 327px;
    margin-top: 25px;
    border: 1px solid #9E6D13;
    background-color: rgb(255, 216, 165);
  }
  #biz-select {
    padding-left: 0px;
    position: relative;
    left: -1px;
  }
  #biz-select h3 {
    padding: 10px 25px;

  }


/* ----- MOBILE ----- */
@media screen and (min-width: 768px) {
  .icon {
    padding-left: 75px;
  }
  .col-md-3 h2 {
    padding-right: 30px;
  }
  .bar-chart {
    margin-left: 10px;
  }
  header {
    padding-top: 150px;
  }
}
@media screen and (min-width: 1025px) {
  #inputCity {
    width: 220px;
  }
  .chat-text {
    width: 280px;
  }
}

